--- a/prak6/index.html
+++ b/prak6/index.html
@@ -12,15 +12,16 @@
         <table>
         <tr>
             <td><label>NIM</label></td>
-            <td><input type="number" name="nim"></td>
+            <td><input type="number" name="nim" placeholder="NIM" id="updateNim"></td>
         </tr>
         <tr>
             <td><label>Nama</label></td>
-            <td><input type="text" name="nama"><br></td>
+            <td><input type="text" name="nama" placeholder="Masukkan nama" id="updateNama"><br></td>
         </tr>
         <tr>
             <td><label>Prodi</label></td>
-            <td><select name="prodi">
+            <td><select name="prodi" id="updateProdi">
+                <option value="" disabled selected>Pilih Prodi</option>
                 <option value="IF">Teknik Informatika</option>
                 <option value="EL">Teknik Elektro</option>
                 <option value="TG">Teknik Geofisika</option>
@@ -32,7 +33,8 @@
         </tr>
         <tr>
             <td><label>Angkatan</label></td>
-            <td><select name="angkatan">
+            <td><select name="angkatan" id="updateAngkatan">
+                <option value="" disabled selected>Pilih Angkatan</option>
                 <option value="2020">2020</option>
                 <option value="2019">2019</option>
                 <option value="2018">2018</option>
